--- a/app/views/onboarding/_interests.html.erb
+++ b/app/views/onboarding/_interests.html.erb
@@ -1,7 +1,9 @@
 <% content_for :hide_navbar, true %>
+<% content_for :hide_flash, true %>
+
 
 <div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
-  <div class="rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; min-width: 450px; width: 90%; color: black; height: 420px; background-color: rgba(255,255,255,0.8);">
+  <div class="rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; min-width: 550px; width: 90%; color: black; height: 420px; background-color: rgba(255,255,255,0.8);">
     <h1 class="archivo-black fw-bold fs-3 pt-2 mb-4">Which activities interest you?</h1>
     <%= form_with url: onboarding_save_interests_path, method: :post, data: { turbo_frame: "onboarding_step" } do %>
       <div class="overflow-auto" style="max-height: 60vh;">
@@ -12,7 +14,7 @@
           <% end %>
         </div>
       </div>
-      <div class="d-flex gap-3 justify-content-center">
+      <div class="d-flex gap-3 justify-content-center", style="margin-top: 50px">
         <%= link_to "← Back", onboarding_steps_path(step: "welcome"), data: { turbo_frame: "onboarding_step" }, class: "btn btn-light rounded-pill archivo mt-5 mb-2", style: "width: 150px; font-weight: 600; font-size: 18px" %>
         <%= submit_tag "Next →", class: "btn btn-secondary rounded-pill archivo mt-5 mb-2", style: "width: 150px; font-weight: 600; font-size: 18px" %>
       </div>
