--- a/app/views/onboarding/_sub_interests.html.erb
+++ b/app/views/onboarding/_sub_interests.html.erb
@@ -1,19 +1,26 @@
 <% content_for :hide_navbar, true %>
+<% content_for :hide_flash, true %>
 
 <div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
-  <div class="rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; min-width: 450px; width: 90%; color: black; height: 420px; background-color: rgba(255,255,255,0.8);">
-    <h1 class="archivo-black fw-bold fs-3 pt-2 mb-4">Choose your sub-interests</h1>
+  <div class="rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; min-width: 550px; width: 90%; color: black; height: 420px; background-color: rgba(255,255,255,0.8);">
+    <h1 class="archivo-black fw-bold fs-3 pt-2 mb-4">Choose your specific interests</h1>
     <%= form_with url: onboarding_save_sub_interests_path, method: :post, data: { turbo_frame: "onboarding_step" } do %>
-      <div class="overflow-auto custom-scrollbar" style="max-height: 210px;">
-        <% @selected_category_ids.each do |cat_id| %>
-          <% category = Category.find(cat_id) %>
-          <h5 class="archivo-black mt-3"><%= category.name %></h5>
-          <div class="d-flex flex-wrap gap-2 justify-content-center mb-5">
-            <% @subcategories.where(category_id: cat_id).each do |subcat| %>
-              <%= check_box_tag "subcategory_ids[]", subcat.id, false, class: "btn-check", id: "subcat_#{subcat.id}", autocomplete: "off" %>
-              <%= label_tag "subcat_#{subcat.id}", subcat.name, class: "btn-outline-custom rounded-pill px-4 py-2 archivo fw-semibold" %>
-            <% end %>
+      <div class="overflow-auto custom-scrollbar" style="max-height: 205px;">
+        <% if @selected_category_ids.empty? %>
+          <div class="d-flex flex-column" style="height: 200px">
+            <p class="archivo fs-6 text-secondary">Please select at least one category to see specific interests.</p>
           </div>
+        <% else %>
+          <% @selected_category_ids.each do |cat_id| %>
+            <% category = Category.find(cat_id) %>
+            <h5 class="archivo-black mt-3"><%= category.name %></h5>
+            <div class="d-flex flex-wrap gap-2 justify-content-center mb-5">
+              <% @subcategories.where(category_id: cat_id).each do |subcat| %>
+                <%= check_box_tag "subcategory_ids[]", subcat.id, false, class: "btn-check", id: "subcat_#{subcat.id}", autocomplete: "off" %>
+                <%= label_tag "subcat_#{subcat.id}", subcat.name, class: "btn-outline-custom rounded-pill px-4 py-2 archivo fw-semibold" %>
+              <% end %>
+            </div>
+          <% end %>
         <% end %>
       </div>
       <div class="d-flex gap-3 justify-content-center">
