--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,12 +1,18 @@
-.badge {
-  background-color: #{"#007bff"};
-  color: white;
-  font-size: 12px;
-  padding: 5px 5px;
-  height: 25px;
-  align-content: center;
-  text-align: center;
-  border-radius: 5px;
+.badge-friend {
+  background-color: transparent !important;
+  color: #626F47 !important;
+  font-size: 12px !important;
+  width: 180px !important;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 35px !important;
+  align-content: center !important;
+  text-align: center !important;
+  border-radius: 90px !important;
+  border-style: solid !important;
+  border-color: #626F47 !important;
 }
 
 .bg-green { background-color: #0b6d0b !important; color: white; }
