--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,22 +24,22 @@
         </span>
       </div>
 
-      <div class="mt-3 w-100 text-center">
+      <div class="mt-4 pt-3 w-100 text-center">
         <% if current_user != @user %>
           <% if current_user.friend_with?(@user) %>
-            <span class="badge btn btn-secondary">Friends</span>
+            <span class="archivo badge btn btn-secondary">Friends</span>
           <% elsif current_user.sent_requests.find_by(friend: @user) %>
-            <span class="badge bg-secondary fs-6">Friend request sent</span>
+            <span class="badge-friend fs-6",>Friend request sent</span>
           <% elsif (friend_request = current_user.pending_friend_requests.find_by(user: @user)) %>
             <div class="btn-group p-2">
               <%= button_to 'Accept', friendship_path(friend_request), method: :patch, params: { status: 'accepted' }, class: "btn btn-outline-success btn-sm rounded archivo me-2", style: "font-weight: 600;" %>
               <%= button_to 'Decline', friendship_path(friend_request), method: :patch, params: { status: 'declined' }, class: "btn btn-outline-danger btn-sm rounded archivo", style: "font-weight: 600;" %>
             </div>
           <% else %>
-            <%= button_to 'Add Friend', friendships_path(friend_id: @user.id), method: :post, class: "btn btn-outline-primary btn-sm" %>
+            <%= button_to 'Add Friend', friendships_path(friend_id: @user.id), method: :post, class: "btn btn-primary rounded-pill archivo mb-2", style: "width: 150px; font-weight: 600; font-size: 18px; margin-top: -6px;" %>
           <% end %>
         <% else %>
-          <button class="btn btn-secondary btn-sm mt-2 rounded-pill archivo" style="font-weight: 600;" data-bs-toggle="collapse" data-bs-target="#friendRequests" aria-expanded="false" aria-controls="friendRequests">
+          <button class="btn btn-secondary rounded-pill archivo mt-2 mb-2", style: "width: 150px; font-weight: 600; font-size: 18px", data-bs-toggle="collapse" data-bs-target="#friendRequests" aria-expanded="false" aria-controls="friendRequests">
             View Friend Requests
           </button>
 
