--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,6 +12,22 @@
   transform: translateY(-2px) !important;
 }
 
+.btn-light-green {
+  background-color: #798645 !important; // your custom color
+  color: #fff !important;
+  border-color: #798645 !important;
+  transition: background-color 400ms, transform 400ms !important;
+  font-size: 13px !important;
+}
+
+.btn-light-green:hover {
+  background-color: #646f39 !important; // hover color
+  color: #fff !important;
+  border-color: #646f39 !important;
+  transform: translateY(-2px) !important;
+  font-size: 13px !important;
+}
+
 .btn-primary {
   background-color: #798645 !important; // your custom color
   color: #fff !important;
