--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,33 @@
-<div class="d-flex flex-column align-items-center min-vh-100 pt-4 pb-5">
+<div class="d-flex flex-column align-items-center min-vh-100 pb-5", style="padding-top: 40px">
 
   <turbo-frame id="user_profile_<%= @user.id %>" class="w-100">
-    <div class="container d-flex flex-column align-items-center" style="max-width: 1000px;">
+    <div class="container pt-2 d-flex flex-column align-items-center" style="max-width: 1000px;">
 
-      <div class="rounded-circle mt-4 pt-3 " style="width: 120px; height: 120px;">
-        <img src="<%= @user.user_image_url %>" alt="<%= @user.username %>'s avatar" class="img-fluid" />
+      <% avatar_urls = [
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946312/duck_uzatea.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946487/giraffe_iz6dir.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946487/panda-bear_k5x6yb.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946488/dragon_vsob23.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946488/penguin_selpzx.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946488/dog_v3wmnw.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946488/jaguar_atrb2w.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946488/hippopotamus_jbd2vd.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946493/bear_pt8nwf.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748946493/koala_zt8cxo.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748947149/goat_jmp9oi.png",
+          "https://res.cloudinary.com/dpekautsm/image/upload/v1748947148/wolf_ydwzua.png"
+        ] %>
+
+      <% selected_url = avatar_urls.first %>
+      <% selected_index = avatar_urls.index(selected_url) %>
+      <% avatar_urls[selected_index] %>
+
+      <div class="d-flex justify-content-center mb-1 w-100">
+        <img id="avatarPreview" src="<%= selected_url %>" alt="Avatar Preview" style="width: 120px; height: 120px; border-radius: 50%;">
       </div>
 
-      <div class="d-flex align-items-center justify-content-center mt-4 pt-2 mb-2">
+
+      <div class="d-flex align-items-center justify-content-center pt-2 mb-2">
         <h1 class="fw-bold fs-3 mb-0 ps-1"><%= @user.username %></h1>
         <% if current_user == @user %>
           <%= link_to edit_user_path(@user), data: { turbo_frame: "user_profile_#{@user.id}" }, class: "btn btn-link p-0 ms-2", title: "Edit Profile" do %>
@@ -24,7 +44,7 @@
         </span>
       </div>
 
-      <div class="mt-4 pt-3 w-100 text-center">
+      <div class="mt-3 pt-3 w-100 text-center">
         <% if current_user != @user %>
           <% if current_user.friend_with?(@user) %>
             <span class="archivo badge btn btn-secondary">Friends</span>
@@ -39,7 +59,7 @@
             <%= button_to 'Add Friend', friendships_path(friend_id: @user.id), method: :post, class: "btn btn-primary rounded-pill archivo mb-2", style: "width: 150px; font-weight: 600; font-size: 18px; margin-top: -6px;" %>
           <% end %>
         <% else %>
-          <button class="btn btn-secondary rounded-pill archivo mt-2 mb-2", style: "width: 150px; font-weight: 600; font-size: 18px", data-bs-toggle="collapse" data-bs-target="#friendRequests" aria-expanded="false" aria-controls="friendRequests">
+          <button class="btn btn-light-green rounded-pill archivo mb-2", style: "width: 150px; font-weight: 600; font-size: 12px", data-bs-toggle="collapse" data-bs-target="#friendRequests" aria-expanded="false" aria-controls="friendRequests">
             View Friend Requests
           </button>
 
@@ -67,9 +87,11 @@
 
       <% if @trips.empty? %>
         <div class="text-center mt-4 w-100">
-          <h3 class="fs-6 pt-5 pb-3">You've not planned any trips yet!</h3>
+          <h3 class="archivo fs-6 pt-5 pb-3", style="font-weight: 700;">You've not planned any trips yet!</h3>
           <% if current_user == @user %>
-            <%= link_to root_path, class: "btn btn-primary" do %>Plan a trip<% end %>
+            <%= link_to root_path, class: "btn btn-secondary rounded-pill archivo mb-2", style: "width: 150px; font-weight: 600; font-size: 18px" do %>
+              Plan a trip →
+            <% end %>
           <% end %>
         </div>
       <% end %>
