fix: updated ap and otehr stuff

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,3 +58,7 @@ button:focus {
   box-shadow: none !important;
   outline: none !important;
 }
+
+.mapboxgl-ctrl-geocoder--suggestions {
+  display: none !important;
+}
