--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
-<div style="margin-top: 6rem; ">
+<div style="margin-top: 6rem;">
   <div class="d-flex flex-column" style="max-width: 600px; width: 100%; margin: auto; padding: 40px; height:100vh">
 
-    <h2 class="fs-3 pb-2", style="font-weight: 800; color: #121212">Sign up</h2>
+    <h2 class="fs-3 pb-2" style="font-weight: 800; color: #121212">Sign up</h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= f.error_notification %>
@@ -16,7 +16,7 @@
         <%= f.label :username, "Username", for: "floatingUsername" %>
       </div>
 
-      <div class="form-inputs" style="">
+      <div class="form-inputs">
         <div class="form-floating mb-3">
           <%= f.email_field :first_name,
                       class: "form-control",
@@ -24,11 +24,12 @@
                       placeholder: "First name",
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "first_name" }%>
-          <%= f.label :first_name, "First Name", for: "floatingfirstname" %>
+                      input_html: { autocomplete: "first_name" } %>
+          <%= f.label :first_name, "First Name", for: "floatingFirstName" %>
         </div>
+      </div>
 
-      <div class="form-inputs" style="">
+      <div class="form-inputs">
         <div class="form-floating mb-3">
           <%= f.email_field :last_name,
                       class: "form-control",
@@ -36,11 +37,12 @@
                       placeholder: "Last name",
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "last_name" }%>
-          <%= f.label :last_name, "Last Name", for: "floatinglastname" %>
-        </div>  
+                      input_html: { autocomplete: "last_name" } %>
+          <%= f.label :last_name, "Last Name", for: "floatingLastName" %>
+        </div>
+      </div>
 
-      <div class="form-inputs" style="">
+      <div class="form-inputs">
         <div class="form-floating mb-3">
           <%= f.email_field :email,
                       class: "form-control",
@@ -48,38 +50,40 @@
                       placeholder: "Email",
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "email" }%>
+                      input_html: { autocomplete: "email" } %>
           <%= f.label :email, "Email", for: "floatingEmail" %>
         </div>
+      </div>
 
-        <div class="form-floating mb-3">
-          <%= f.password_field :password,
-                        class: "form-control",
-                        id: "floatingPassword",
-                        placeholder: "Password",
-                        required: true,
-                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                        input_html: { autocomplete: "new-password" } %>
-          <%= f.label :password, "Password", for: "floatingPassword" %>
-        </div>
+      <div class="form-floating mb-3">
+        <%= f.password_field :password,
+                      class: "form-control",
+                      id: "floatingPassword",
+                      placeholder: "Password",
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+        <%= f.label :password, "Password", for: "floatingPassword" %>
+      </div>
 
-        <div class="form-floating mb-3">
-          <%= f.password_field :password_confirmation,
-                        class: "form-control",
-                        id: "floatingPasswordConfirmation",
-                        placeholder: "Confirm Password",
-                        required: true,
-                        input_html: { autocomplete: "new-password" } %>
-          <%= f.label :password_confirmation, "Confirm Password", for: "floatingPasswordConfirmation" %>
-        </div>
+      <div class="form-floating mb-3">
+        <%= f.password_field :password_confirmation,
+                      class: "form-control",
+                      id: "floatingPasswordConfirmation",
+                      placeholder: "Confirm Password",
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+        <%= f.label :password_confirmation, "Confirm Password", for: "floatingPasswordConfirmation" %>
+      </div>
 
       <div class="d-flex flex-column align-items-center justify-content-center">
         <div class="form-actions">
           <%= f.button :submit, "Sign up", class: "btn btn-secondary rounded-pill archivo mt-5 mb-2", style: "width: 150px; font-weight: 600; font-size:  18px" %>
-
         </div>
         <%= render "devise/shared/links" %>
       </div>
+
     <% end %>
+
   </div>
 </div>
