--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,5 +54,7 @@
 
     <%= render "shared/footer" %>
 
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" data-turbo-track="reload" defer></script>
+
   </body>
 </html>
