--- a/app/views/onboarding/_welcome.html.erb
+++ b/app/views/onboarding/_welcome.html.erb
@@ -1,17 +1,20 @@
-<% content_for :hide_navbar, true %>
-<% content_for :hide_flash, true %>
+<div class="rounded-4 p-4 shadow-lg text-center"
+     style="backdrop-filter: blur(50px); max-width: 600px; min-width: 550px; width: 90%; color: black; background-color: rgba(255,255,255,0.8); overflow: hidden; padding-top: 40px;">
 
-<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
-  <div class="d-flex flex-column justify-content-between  align-items-center rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; min-width: 550px; width: 90%; color: black; height: 420px; background-color: rgba(255,255,255,0.8);">
-    <div class="d-flex flex-column align-items-center", style="padding-top: 110px;">
-      <h1 class="archivo-black fw-bold fs-3 mb-3">Welcome to Plan&Go, <%= current_user.first_name %></h1>
-      <p class="archivo fs-6 text-secondary" style="font-weight: 300;">Tell us your travel preferences to receive customised trip plans</p>
-    </div>
-    <div class="d-flex flex-column w-100 align-items-center">
-      <%= link_to "Let's Go →", onboarding_steps_path(step: "interests"), data: { turbo_frame: "onboarding_step" }, class: "btn btn-secondary rounded-pill archivo mt-3", style: "width: 150px; font-weight: 600; font-size: 18px; margin-bottom: 10px" %>
-      <div class="progress w-100 mt-4 mb-1" style="height: 8px; border-radius: 4px;">
-        <div class="progress-bar" style="width: 0%; background-color: #798645; margin-top: -5px"></div>
-      </div>
-    </div>
+  <h1 class="archivo-black fw-bold fs-3 mb-3">
+    Welcome to Plan&Go, <%= current_user.first_name %>
+  </h1>
+
+  <p class="archivo fs-6 text-secondary" style="font-weight: 300;">
+    Tell us your travel preferences to receive customised trip plans
+  </p>
+
+  <div class="d-flex justify-content-center mt-4">
+    <%= link_to "Let's Go →", onboarding_interests_path, class: "btn btn-secondary rounded-pill archivo", style: "width: 150px; font-weight: 600; font-size: 18px" %>
   </div>
+
+  <div class="progress mt-4" style="height: 8px; border-radius: 4px;">
+    <div class="progress-bar" style="width: 0%; background-color: #798645;"></div>
+  </div>
+
 </div>
